product route finalize
